@@ -4,6 +4,7 @@
 \alias{read.ParameterRanges}
 \alias{rLHS}
 \alias{hydromod.eval.SA}
+\alias{hydromodInR.eval}
 \description{Internal hydroPSO objects.}
 \details{These are not to be called by the user.}
 \keyword{internal}
